--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   },
   "author": "Gabriel Espinosa",
   "license": "ISC",
-  "devDependencies": {
-    "body-parser": "^1.20.2",
+
+  "dependencies": {
+    "mongoose": "^7.5.1",
+   "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
-  },
-  "dependencies": {
-    "mongoose": "^7.5.1"
   }
 }
