--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v1
 
       - uses: actions/setup-node@v2
+        with:
+          node-version: '20'
 
       - name: install dependecies
         run: npm install
