--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
         run: npm install
 
       - name: Run website
-        run:  npm start
+        run:  npm start & sleep 60  # Attendez 60 secondes (ajustez si nécessaire)
+          pkill -f "node index.js" || true
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
