--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: Deploy to AWS S3
 on:
   push:
@@ -21,7 +20,7 @@ jobs:
         run: npm install
 
       - name: Run website
-        run:  npm start & sleep 60  # Attendez 60 secondes (ajustez si nécessaire)
+        run: npm start & sleep 60 
           pkill -f "node index.js" || true
 
       - name: Configure AWS Credentials
