--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
         run: npm install
 
       - name: Run website
-        run: npm start & sleep 60 
-          pkill -f "node index.js" || true
+        run: npm start &
+        timeout: 10s
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
