--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run website
         run: npm start &
-        timeout: 10s
+        timeout-minutes: 1
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
