--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,5 +53,5 @@ jobs:
           script: |
             kill $(cat process.txt) 
             npm install |
-            nohup npm start & |
+            nohup npm start & 
             echo $! > process.txt
