--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
           key: ${{secrets.PRIVATE_KEY}}
           port: ${{secrets.PORT}}
           script: |
-            sudo rm -rf ./recipe-project
+            sudo rm -rf ./recipe-project 
 
       - name: 📂 Copy file via ssh
         uses: appleboy/scp-action@v0.1.7
@@ -54,4 +54,4 @@ jobs:
             kill $(cat process.txt) 
             npm install |
             nohup npm start & 
-            echo $! > process.txt
+            | echo $! > process.txt
