--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
           key: ${{secrets.PRIVATE_KEY }}
           port: ${{secrets.PORT }}
           script: |
-            kill $(cat process.txt) 
-            npm install |
+            kill $(cat process.txt) | 
+            npm install 
             nohup npm start & 
-            | echo $! > process.txt
+            echo $! > process.txt
