--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
           key: ${{secrets.PRIVATE_KEY }}
           port: ${{secrets.PORT }}
           script: |
-            kill $(cat process.txt) | 
+            kill $(pgrep -f "node index.js") | 
             npm install 
-            nohup npm start & 
-            echo $! > process.txt
+            npm start & 
+            ls
