--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,5 @@ jobs:
           key: ${{secrets.PRIVATE_KEY }}
           port: ${{secrets.PORT }}
           script: |
-            kill $(pgrep -f "node index.js")  &&
-            npm install &&
-            npm start & 
+            kill $(pgrep -f "node index.js")  && npm install && npm start & 
             
