--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,7 @@ jobs:
           source: "./*"
           target: .
 
-      - name: Delete old process
+      - name: ❎ Delete old process
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{secrets.HOST }}
@@ -51,7 +51,9 @@ jobs:
           key: ${{secrets.PRIVATE_KEY }}
           port: ${{secrets.PORT }}
           script: |
-            kill $(pgrep -f "node index.js")  
+            if [ -n "$PID" ]; then
+              kill $PID
+            fi 
 
       - name: 🫡 Run deploy script on remote
         uses: appleboy/ssh-action@v1.0.3
@@ -62,5 +64,4 @@ jobs:
           port: ${{secrets.PORT }}
           script: |
             npm install 
-            npm start & 
-            
+            npm start &
