--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,7 +55,6 @@ jobs:
             if [ -n "$PID" ]; then
               kill $PID
             fi 
-            cat index.js
 
       - name: 🫡 Run deploy script on remote
         uses: appleboy/ssh-action@v1.0.3
@@ -65,5 +64,9 @@ jobs:
           key: ${{secrets.PRIVATE_KEY }}
           port: ${{secrets.PORT }}
           script: |
+            PID=$(pgrep -f "node index.js")
+            if [ -n "$PID" ]; then
+              kill $PID
+            fi 
             npm install 
             npm start &
