--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,4 +59,4 @@ jobs:
               echo "Nothing to delete";
             fi 
             npm install 
-            npm start &
+            nohup npm start &
