--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,7 +54,7 @@ jobs:
             PID=$(pgrep -f "node index.js")
             if [ -n "$PID" ]; then
               echo $PID;
-              kill $PID;
+              pkill -f $PID;
               echo "Deleted process" 
             else 
               echo "Nothing to delete";
