--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,4 +60,4 @@ jobs:
               echo "Nothing to delete!";
             fi
             npm install 
-            nohup npm start
+            nohup npm start &
